* Theme colors * Navbar

--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-
+<mat-toolbar class="toolbar">
+  <mat-toolbar-row class="toolbar-row">
+    <img src="assets/logo/logo.svg" alt="logo" class="logo">
+    <span>Cryptocurrencies</span>
+    <span>Exchanges</span>
+    <span>Community</span>
+    <span>Products</span>
+    <span>Learn</span>
+    <span class="spacer"></span>
+    <button mat-stroked-button class="login-button">Log in</button>
+    <button mat-flat-button class="signup-button">Sign up</button>
+  </mat-toolbar-row>
+</mat-toolbar>
