--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar">
   <mat-toolbar-row class="toolbar-row">
-    <img src="assets/logo/logo.svg" alt="logo" class="logo">
-    <span>Cryptocurrencies</span>
+    <img src="assets/logo/logo.svg" alt="logo" [routerLink]="''" class="logo">
+    <span [routerLink]="'/cryptocurrencies'" class="link">Cryptocurrencies</span>
     <span>Exchanges</span>
     <span>Community</span>
     <span>Products</span>
