--- a/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.scss
+++ b/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.scss
@@ -1,7 +1,8 @@
 @import "../../../styles/theme-colors";
 
 .actual-market-status {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: 1rem;
   font-weight: 400;
   color: $theme-dark-grey;
