--- a/src/app/cryptocurrency/cryptocurrency-list/cryptocurrency-list.component.html
+++ b/src/app/cryptocurrency/cryptocurrency-list/cryptocurrency-list.component.html
@@ -12,12 +12,6 @@ Webstorm doesn't support this syntax yet ;(
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div (click)="toggleFavouriteProperty(element.id)">
-          <!--@if (element.favourite) {
-          <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="star" class="favourite-icon"></mat-icon>
-          } else {
-          <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="star_border" class="favourite-icon"></mat-icon>
-          }-->
-
           <ng-container *ngIf="element.favourite; else notFavourite">
             <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="star" class="favourite-icon"></mat-icon>
           </ng-container>
@@ -37,9 +31,11 @@ Webstorm doesn't support this syntax yet ;(
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
-        <img src="/assets/icons/cryptoicons/{{ element.symbol | lowercase }}.svg" alt="icon" class="cryptoicon" />
-        <span class="element-name">{{ element.name }}</span>
-        <span class="cryptocurrency-symbol">{{ element.symbol }}</span>
+        <span class="cryptocurrency-name-container">
+          <app-cryptocurrency-icon [cryptocurrencySymbol]="element.symbol"></app-cryptocurrency-icon>
+          <span class="element-name">{{ element.name }}</span>
+          <span class="cryptocurrency-symbol">{{ element.symbol }}</span>
+        </span>
       </td>
     </ng-container>
 
@@ -65,12 +61,12 @@ Webstorm doesn't support this syntax yet ;(
 
     <ng-container matColumnDef="marketCap">
       <th mat-header-cell *matHeaderCellDef class="align-right">Market Cap</th>
-      <td mat-cell *matCellDef="let element" class="align-right">{{ element.quotes.USD.market_cap }}</td>
+      <td mat-cell *matCellDef="let element" class="align-right">{{ element.quotes.USD.market_cap | number }}</td>
     </ng-container>
 
     <ng-container matColumnDef="volumeDay">
       <th mat-header-cell *matHeaderCellDef class="align-right">Volume (24h)</th>
-      <td mat-cell *matCellDef="let element" class="align-right">{{ element.quotes.USD.volume_24h }}</td>
+      <td mat-cell *matCellDef="let element" class="align-right">{{ element.quotes.USD.volume_24h | number }}</td>
     </ng-container>
 
     <ng-container matColumnDef="circulatingSupply">
@@ -79,7 +75,7 @@ Webstorm doesn't support this syntax yet ;(
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="'details/' + row.id"></tr>
   </table>
 </ng-container>
 
