--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,11 +55,17 @@ body {
   font-size: 2.25rem;
   font-weight: 900;
   color: $theme-black;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .page-content {
   margin-top: 4rem;
+}
+
+.mat-expansion-panel-header .mat-expansion-panel-header-title {
+  color: $theme-purple;
+  font-weight: 500;
 }
 
 
