Cryptocurrency details - favourite and go back icons

--- a/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.html
+++ b/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.html
@@ -1,9 +1,10 @@
 <h1 class="page-title">Today's Cryptocurrency Prices</h1>
 <p class="actual-market-status">
-  The global crypto market cap is
-  <span>$1.42T</span>
-  , a
-  <span class="increase">2.04%</span>
+  The global crypto market cap is $1.42T, a
+  <span class="increase">
+    <img [src]="'assets/icons/increase.svg'" alt="increase-icon" />
+    2.04%
+  </span>
   increase over the last day.
   <a href="#" class="read-more-link">Read More</a>
 </p>
