--- a/src/app/cryptocurrency/cryptocurrency-icon/cryptocurrency-icon.component.html
+++ b/src/app/cryptocurrency/cryptocurrency-icon/cryptocurrency-icon.component.html
@@ -1,6 +1,2 @@
-<ng-container *ngIf="iconPath$ | async as icon">
-  <img [src]="icon" alt="icon"
-       [ngStyle]="{ 'width': sizeInRems + 'rem', 'height': sizeInRems + 'rem' }"/>
-</ng-container>
-
-
+<img [src]='iconSource' alt="icon" (error)="fallbackToDefault()"
+     [ngStyle]="{ 'width': sizeInRems + 'rem', 'height': sizeInRems + 'rem' }"/>
