--- a/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.scss
+++ b/src/app/cryptocurrency/cryptocurrencies-overview/cryptocurrencies-overview.component.scss
@@ -1,14 +1,19 @@
 @import "../../../styles/theme-colors";
 
 .actual-market-status {
-  display: flex;
-  justify-content: center;
+  display: block;
+  text-align: center;
+
   font-size: 1rem;
   font-weight: 400;
   color: $theme-dark-grey;
 
   .increase {
     color: $success;
+
+    img {
+      height: 0.4rem;
+    }
   }
 
   .read-more-link {
