--- a/src/app/cryptocurrency/cryptocurrency-details/cryptocurrency-details.component.html
+++ b/src/app/cryptocurrency/cryptocurrency-details/cryptocurrency-details.component.html
@@ -1,3 +1,4 @@
+<!--I would improve this by adding cryptocurrency object iterator (with filtering out id or name) would be great, especially when using more currencies than USD-->
 <ng-container *ngIf="cryptocurrency$ | async as cryptocurrency">
   <h1 class="page-title">
     <div class="go-back-icon" (click)="goBack()">
